See <<seek>> for more information.

The `ContainerProperties` provides an `idleBetweenPolls` option to let the main loop in the listener container to sleep between `KafkaConsumer.poll()` calls.
See its JavaDocs and <<kafka-container>> for more information.

When using `AckMode.MANUAL` (or `MANUAL_IMMEDIATE`) you can now cause a redelivery by calling `nack` on the `Acknowledgment`.
See <<committing-offsets>> for more information.

Listener performance can now be monitored using Micrometer `Timer` s.
See <<micrometer>> for more information.

The containers now publish additional consumer lifecyle events relating to startup.
See <<events>> for more information.

Transactional batch listeners can now support zombie fencing.
See <<transactions>> for more information.

The listener container factory can now be configured with a `ContainerCustomizer` to further configure each container after it has been created and configured.
See <<container-factory>> for more information

The `ContainerProperties` provides an `authorizationExceptionRetryInterval` option to let the listener container to retry after any `AuthorizationException` is thrown by the `KafkaConsumer`.
See its JavaDocs and <<kafka-container>> for more information.

Static group membership is now supported.
See <<message-listener-container>> for more information.

==== @KafkaListener

The `@KafkaListener` annotation has a new property `splitIterables`; default true.
When a replying listener returns an `Iterable` this property controls whether the return result is sent as a single record or a record for each element is sent.
See <<annotation-send-to>> for more information.

=== Migration Guide

You can now customize the header names for correlation, reply topic and reply partition.
See <<replying-template>> for more information.

==== Header Mapper Changes

The `DefaultKafkaHeaderMapper` no longer encodes simple String-valued headers as JSON.
See <<header-mapping>> for more information.